--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hello-blockstack",
+  "name": "D-Vault",
   "version": "0.0.0",
   "description": "A simple Blockstack app using ReactJS",
   "repository": {
@@ -18,6 +18,7 @@
   "dependencies": {
     "@blockstack/connect": "^2.7.2",
     "@blockstack/stacks-transactions": "^0.7.0",
+    "@stacks/storage": "^1.0.0-beta.17",
     "blockstack": "^19.2.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
